.provarCaches/00D410000011HE0EAM/objects/rstk__icdailyusg__c.object
<CustomObject>
    <description>icdailyusg__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icdailyusg_icitem__r.rstk__icitem_div__r.rstk__sydiv_div__c + &apos;_&apos; + rstk__icdailyusg_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + TEXT( rstk__icdailyusg_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icdailyusg_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos; (&apos; + TEXT( rstk__icdailyusg_date__c ) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__icdailyusg_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdailyusg_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdailyusg_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Item Daily Usage</relationshipLabel>
        <relationshipName>icdailyusgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdailyusg_usage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Usage</label>
        <summarizedField>rstk__icusage__c.rstk__icusage_txnqty__c</summarizedField>
        <summaryForeignKey>rstk__icusage__c.rstk__icusage_icdailyusg__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Item Daily Usage</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Item_Daily_Usage</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdailyusg_icitem__c</columns>
        <columns>rstk__icdailyusg_usage__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Item Daily Usage</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Item_Daily_Usage_500150072</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdailyusg_icitem__c</columns>
        <columns>rstk__icdailyusg_usage__c</columns>
        <columns>rstk__icdailyusg_date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__icdailyusg_icitem__c</field>
            <operation>contains</operation>
            <value>500150072</value>
        </filters>
        <label>Item Daily Usage - 500150072</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Item_Daily_Usage_Debug</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdailyusg_icitem__c</columns>
        <columns>rstk__icdailyusg_usage__c</columns>
        <columns>rstk__icdailyusg_date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>5/4/2017 12:00 AM</value>
        </filters>
        <label>Item Daily Usage - Debug</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Item_Daily_Usage_Debug2</fullName>
        <columns>rstk__icdailyusg_icitem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>5/4/2017 12:00 AM</value>
        </filters>
        <label>Item Daily Usage - Debug2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Daily Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>